<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TableLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/film_item_table"
        android:numColumns="2"
        android:stretchColumns="0">
        <TableRow>
            <TextView
                android:text="@string/title"/>
            <TextView
                android:id="@+id/film_item_title_data"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/year"/>
            <TextView
                android:id="@+id/film_item_year_data"/>
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/Genre"/>
            <TextView
                android:id="@+id/film_item_genre_data"/>
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/imdbRating"/>
            <TextView
                android:id="@+id/film_item_rating_data"/>
        </TableRow>


    </TableLayout>

</LinearLayout>