<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.engy.filmasia.MainActivity"
    tools:showIn="@layout/app_bar_main">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/query"
            android:hint="@string/search_film"/>
        <TextView
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/search_results"/>
        <TableLayout
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/film_info"
            android:numColumns="2"
            android:stretchColumns="0"
            android:visibility="invisible">
            <TableRow>
                <TextView
                    android:text="@string/title"/>
                <TextView
                    android:id="@+id/title_data"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/year"/>
                <TextView
                    android:id="@+id/year_data"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:text="@string/Genre"/>
                <TextView
                    android:id="@+id/genre_data"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:text="@string/imdbRating"/>
                <TextView
                    android:id="@+id/rating_data"/>
            </TableRow>


        </TableLayout>
    </LinearLayout>



</ScrollView>
